FIX prevent text wrapping in DataTree tree column

--- a/Facades/js/themes/jeasyui.exface.css
+++ b/Facades/js/themes/jeasyui.exface.css
@@ -151,6 +151,7 @@ div.messager-body{overflow-y: auto;}
 .datagrid .tree-icon {background: none; width: 2px;}
 .datagrid-footer .tree-icon {background: none; width: 2px;}
 .datagrid td .datagrid-cell {text-overflow: inherit;} /* makes the use of text-overflow in cell styler possible */
+.datagrid td .datagrid-cell.tree-node {white-space: nowrap !important}
 .datagrid-empty {top: 50% !important;}
 
 /* spinner */
